Refactor regressions (#3146)
+ Create ReproductionUtils to start pulling together common functionality
+ Add ability to stream YAML from fatjar
+ Tweak command-line parameters
+ Add better summarization capabilities of log output
+ Step towards ability to completely run regressions from fatjar (outside of repo)